# tf_course

./: .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
notebooks/: 00_Introduction.ipynb  01_NN_regression.ipynb  02_classification.ipynb  03_CNN.ipynb  best_HDF5.h5
notebooks/.ipynb_checkpoints/: 00_Introduction-checkpoint.ipynb  01_NN_regression-checkpoint.ipynb  02_classification-checkpoint.ipynb  03_CNN-checkpoint.ipynb
notebooks/experiments/: 4_int_relu_exp-Copy1.ipynb  4_int_relu_exp.ipynb  4_int_relu_exp_2.ipynb
notebooks/models/: best_HDF5.h5  best_SaveModel.keras
