[project]
name = "tf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pydot>=4.0.1",
    "scikit-learn>=1.8.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-macos>=2.16.2",
]
